Fixed spacing around images. adjusted fonts

--- a/main.css
+++ b/main.css
@@ -4,13 +4,14 @@ body > * {
     background-color: #ffffff;
     font-family: 'Fira Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #37393A;
+    font-size: 1em;
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 2.5em;
 }
 h2 {
-    font-size: 2.25em;
+    font-size: 2em;
 }
 h3 {
     font-size: 1.75em;
@@ -19,10 +20,13 @@ ul {
     list-style: none;
 }
 img {
-    max-width: 100%;
+    max-width: 100%;    
+}
+
+.feature-block {
     margin: 10px;
     padding: 10px;
-    
+    display: block;
 }
 .grid {
     display: grid;
@@ -59,7 +63,6 @@ img {
     "area-2"
     "area-3"
     "area-4"
-   
     "area-5"
     "area-6"
     "area-7"
@@ -96,17 +99,24 @@ img {
 .logo {
     grid-area: left 1fr;
     align-self: center;
+    padding-right: 1em;
     
 }
 .tagline {
     grid-area: middle 3fr;
     align-self: center;
+    padding-left: 1em;
+    padding-right: 1em;
+    font-size: 2em;
+    font-weight: 900;
 
 }
 
 .features {
     grid-area: right 1fr;
     align-self: center;
+    font-size: 1.25em;
+    font-weight: bold;
 }
 
 
@@ -156,6 +166,7 @@ img {
     margin: 10px;
     padding: 10px;
     grid-area: cta-box;
+    font-size: 1em;
 
 }
 
